--- a/LaTex_templates/IEEE_template/references.bib
+++ b/LaTex_templates/IEEE_template/references.bib
@@ -38,7 +38,7 @@
   year      = {2014}
 }
 
-% Online template
+% Online article/blog template
 @online{WinNT,
   author  = {MultiMedia LLC},
   title   =  {{MS Windows NT} Kernel Description},
@@ -47,4 +47,10 @@
   urldate = {2010-09-30}
 }
 
-
+% Private communication template
+@misc{CY_Aug2021,
+author ="C. Yero",
+howpublished = "Private communication",
+year = "2021",
+month = "August"
+}
