--- a/LaTex_templates/IEEE_template/references.bib
+++ b/LaTex_templates/IEEE_template/references.bib
@@ -1,3 +1,10 @@
+% DO NOT TOUCH!!! This line is required to prevent erroneous bibliography
+% entries, where the name of the author gets replaced by a ----- line. This
+% has been observed in IEEE formatting, but this is how to fix it.
+% See: https://tex.stackexchange.com/questions/29381/is-it-normal-for-bibtex-to-replace-similar-author-names-with
+@IEEEtranBSTCTL{IEEEexample:BSTcontrol,
+  CTLdash_repeated_names = "no"
+}  
 
 % General template formats for different references (you can also search online for latex reference types)
 % See https://www.bibtex.com/e/entry-types/
@@ -17,54 +24,6 @@
 % Reference:  https://www.systutorials.com/why-do-i-need-to-run-latex-bibtex-three-times-to-make-everything-look-good/)
 
 
-% Article template
-%@article{CitekeyArticle,
-%  author   = {P. J. Cohen},
-%  title    = {The independence of the continuum hypothesis},
-%  journal  = {Proceedings of the National Academy of Sciences},
-%  year     = {1963},
-%  volume   = {50},
-%  number   = {6},
-%  pages    = {1143--1148}
-%}
-
-%@article{my_article,
-%  author   = {F. LastName},
-%  title    = {The independence of the continuum hypothesis},
-%  journal  = {Proceedings of the National Academy of Sciences},
-%  year     = {1963},
-%  volume   = {50},
-%  number   = {6},
-%  pages    = {1143--1148}
-%}
-
-% Book template 
-%@book{CitekeyBook,
-%  author    = {Leonard Susskind and George Hrabovsky},
-%  title     = {Classical mechanics: the theoretical minimum},
-%  publisher = {Penguin Random House},
-%  address   = {New York, NY},
-%  year      = {2014}
-%}
-
-% Online article/blog template
-%@online{WinNT,
-%  author  = {MultiMedia LLC},
-%  title   =  {{MS Windows NT} Kernel Description},
-%  year    = {1999},
-%  url     = {http://web.archive.org/web/20080207010024/http://www.808multimedia.com/winnt/kernel.htm},
-%  note    = {(Accessed on 2012-03-20)}
-
-%}
-
-% Private communication template
-%@misc{CY_Aug2021,
-%author ="C. Yero",
-%howpublished = "Private communication",
-%year = "2021",
-%month = "August"
-%}
-
 %----------------------------------------------------------
 
 % ODU Mentoring Program 2021: Research Paper Bibliography
@@ -78,7 +37,6 @@
   year    = {2019},
   url     = {https://victorzhou.com/blog/intro-to-neural-networks/},
   note    = {(Accessed on 2012-03-20)}
-
 }
 
 @online{CNNPart1_VZ_2019,
