Updated Research Paper

--- a/Zain_Mothupi_3/Paper/IEEE_template/references.bib
+++ b/Zain_Mothupi_3/Paper/IEEE_template/references.bib
@@ -98,3 +98,11 @@ howpublished = {Private communication},
 year = {2021},
 month = {August}
 }
+
+@online{CNN_Keras_VZ_2020,
+  author  = {Victor Zhou},
+  title   =  {{A Simple Explanation of the Softmax Function}},
+  year    = {2019},
+  url     = {https://victorzhou.com/blog/softmax/},
+  note    = {(Accessed on 2012-03-20)}
+}
